2008-12-04  Kevin Watters  <kevinwatters@gmail.com>

        Reviewed by Kevin Ollivier.

        wx implementations for Path API.

        https://bugs.webkit.org/show_bug.cgi?id=22661

        * platform/graphics/wx/PathWx.cpp:
        (WebCore::Path::~Path):
        (WebCore::Path::contains):
        (WebCore::Path::addLineTo):
        (WebCore::Path::addQuadCurveTo):
        (WebCore::Path::addBezierCurveTo):
        (WebCore::Path::addArcTo):
        (WebCore::Path::closeSubpath):
        (WebCore::Path::addArc):
        (WebCore::Path::addRect):
        (WebCore::Path::addEllipse):
        (WebCore::Path::transform):
        (WebCore::Path::isEmpty):

2008-12-04  Julien Chaffraix  <jchaffraix@webkit.org>

        Reviewed by Eric Seidel.

        Bug 22564: Make HTML elements' constructors take a QualifiedName
        https://bugs.webkit.org/show_bug.cgi?id=22564

        Updated the remaining constructors.

        * bindings/js/JSImageConstructor.cpp:
        (WebCore::constructImage):
        * dom/Document.cpp:
        (WebCore::Document::getCSSCanvasElement):
        * editing/DeleteButton.cpp:
        (WebCore::DeleteButton::DeleteButton):
        * html/HTMLAppletElement.cpp:
        (WebCore::HTMLAppletElement::HTMLAppletElement):
        * html/HTMLAppletElement.h:
        * html/HTMLAreaElement.cpp:
        (WebCore::HTMLAreaElement::HTMLAreaElement):
        * html/HTMLAreaElement.h:
        * html/HTMLBaseFontElement.cpp:
        (WebCore::HTMLBaseFontElement::HTMLBaseFontElement):
        * html/HTMLBaseFontElement.h:
        * html/HTMLCanvasElement.cpp:
        (WebCore::HTMLCanvasElement::HTMLCanvasElement):
        * html/HTMLCanvasElement.h:
        * html/HTMLElementFactory.cpp:
        (WebCore::hrConstructor):
        (WebCore::paragraphConstructor):
        (WebCore::basefontConstructor):
        (WebCore::fontConstructor):
        (WebCore::anchorConstructor):
        (WebCore::imageConstructor):
        (WebCore::mapConstructor):