@@ -2,6 +2,17 @@
 
         Reviewed by Kevin Ollivier.
 
+        Turn off styled controls until we can implement them properly.
+        
+        https://bugs.webkit.org/show_bug.cgi?id=22662
+
+        * platform/wx/RenderThemeWx.cpp:
+        (WebCore::RenderThemeWx::isControlStyled):
+
+2008-12-04  Kevin Watters  <kevinwatters@gmail.com>
+
+        Reviewed by Kevin Ollivier.
+
         wx implementations for Path API.
 
         https://bugs.webkit.org/show_bug.cgi?id=22661
